# hs-deck-builder

./: README.md  hs-deck-builder.cabal
app/: Main.hs
data/: cards.json
