name:                hs-deck-builder
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/joepym/hs-deck-builder#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Pym
maintainer:          joe@joepym.com
copyright:           Joe Pym
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       bytestring,
                       text
  default-language:    Haskell2010

executable hs-deck-builder-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hs-deck-builder
                     , aeson
                     , bytestring
                     , text
  default-language:    Haskell2010

test-suite hs-deck-builder-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-deck-builder
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hs-deck-builder
